# microbeads

./: .gitattributes  AGENTS.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
.microbeads/: metadata.json
.microbeads/issues/: bd-08db.json  bd-09b7.json  bd-0d7d.json  bd-19e0.json  bd-243b.json  bd-2837c3e0.json  bd-29b5.json  bd-29de7a77.json  bd-2e8a.json  bd-32bf.json  bd-3a87878d.json  bd-4a5890d9.json  bd-4aaa39a4.json  bd-52e10ed5.json  bd-5cd6.json  bd-5fb51b47.json  bd-6128.json  bd-66ed.json  bd-708c.json  bd-74ad.json  bd-7932e8cd.json  bd-7d7a.json  bd-84015e22.json  bd-9803385f.json  bd-a744.json  bd-ae7f.json  bd-b2b0.json  bd-b3cf.json  bd-caad.json  bd-d2b9.json  bd-df4fba67.json  bd-e2694b5c.json  bd-f3b8.json
.microbeads/issues/active/: bd-5ad0bdcb.json  mi-34e4fbd0.json  mi-7145b915.json  mi-84255579.json  mi-95529e41.json  mi-fcec7860.json
.microbeads/issues/closed/: bd-08db.json  bd-09b7.json  bd-0d7d.json  bd-1435e8f0.json  bd-160ad30e.json  bd-167874f6.json  bd-19e0.json  bd-2149.json  bd-243b.json  bd-2609015c.json  bd-26d24984.json  bd-29a58b32.json  bd-29b5.json  bd-2e8a.json  bd-32bf.json  bd-37feac7c.json  bd-4a5890d9.json  bd-4ea7c359.json  bd-52e10ed5.json  bd-5ad0bdcb.json  bd-5cd6.json  bd-5e2dee45.json  bd-6128.json  bd-66ed.json  bd-708c.json  bd-7408af69.json  bd-74ad.json  (+46 more)
docs/: claude-code-web-api.md
src/microbeads/: __init__.py  cli.py  issues.py  merge.py  repo.py
tests/: conftest.py  test_cli_e2e.py  test_issues.py  test_merge.py  test_performance.py  test_repo.py
